--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       </div>
 
       <main>
-        <div class="flex flex-col gap-7 mb-[126px]">
+        <div class="flex flex-col gap-7 mb-[64px]">
           <h1 class="text-5xl font-semibold font-primary text-center">
-            LOREM IPSUM
+            GENINHO
           </h1>
           <p
             class="uppercase text-center text-[20px] leading-6 tracking-[2.2px] font-secondary font-medium"
@@ -42,26 +42,47 @@
             SKILLS
           </h2>
           <div
-            class="grid grid-cols-4 grid-rows-3 gap-2 max-w-[264px] min-h-[204px] self-center"
+            class="grid grid-cols-4 grid-rows-3 gap-2 max-w-[294px] min-h-[204px] self-center"
           >
-            <img class="icon-skills" src="src/assets/JavaScript.svg" alt="JavaScript" />
+            <img
+              class="icon-skills"
+              src="src/assets/JavaScript.svg"
+              alt="JavaScript"
+            />
             <img class="icon-skills" src="src/assets/css.svg" alt="CSS" />
             <img class="icon-skills" src="src/assets/html.svg" alt="Html" />
             <img class="icon-skills" src="src/assets/React.svg" alt="React" />
 
             <img class="icon-skills" src="src/assets/Sass.svg" alt="Sass" />
-            <img class="icon-skills" src="src/assets/Cinema4d.svg" alt="Cinema4d" />
+            <img
+              class="icon-skills"
+              src="src/assets/Cinema4d.svg"
+              alt="Cinema4d"
+            />
             <img class="icon-skills" src="src/assets/Figma.svg" alt="Figma" />
-            <img class="icon-skills" src="src/assets/Photoshop.svg" alt="Photoshop" />
+            <img
+              class="icon-skills"
+              src="src/assets/Photoshop.svg"
+              alt="Photoshop"
+            />
 
-            <img class="icon-skills" src="src/assets/After Effects.svg" alt="After Effects" />
+            <img
+              class="icon-skills"
+              src="src/assets/After Effects.svg"
+              alt="After Effects"
+            />
             <img class="icon-skills" src="src/assets/Git.svg" alt="Git" />
             <img class="icon-skills" src="src/assets/NodeJs.svg" alt="NodeJs" />
-            <img class="icon-skills" src="src/assets/Blender.svg" alt="Blender" />
+            <img
+              class="icon-skills"
+              src="src/assets/Blender.svg"
+              alt="Blender"
+            />
           </div>
-          <section class="mt-16">
+
+          <section class="mt-[64px]">
             <div class="flex flex-col gap-10">
-              <h2 class="text-5xl font-semibold text-center">My Expertise</h2>
+              <h2 class="text-4xl font-semibold text-center">My Expertise</h2>
 
               <!-- CARD-01 -->
               <div class="border-2 border-gray-600">
@@ -80,7 +101,7 @@
                   </div>
                 </div>
 
-                <div>
+                <div class="mb-[44px]">
                   <p class="mx-[32px] mb-[4px] text-gray-600">&lt;h3&gt;</p>
                   <p
                     class="border-l-2 border-gray-600 px-4 font-secondary font-normal text-[16px] mx-[49px]"
@@ -109,7 +130,7 @@
                   </div>
                 </div>
 
-                <div>
+                <div class="mb-[44px]">
                   <p class="mx-[32px] mb-[4px] text-gray-600">&lt;h3&gt;</p>
                   <p
                     class="border-l-2 border-gray-600 px-4 font-secondary font-normal text-[16px] mx-[49px]"
@@ -122,7 +143,7 @@
                 </div>
               </div>
 
-              <!-- CARD-02 -->
+              <!-- CARD-03 -->
               <div class="border-2 border-gray-600">
                 <div class="relative">
                   <div class="flex gap-6 py-[44px] px-[36px]">
@@ -138,7 +159,7 @@
                   </div>
                 </div>
 
-                <div>
+                <div class="mb-[44px]">
                   <p class="mx-[32px] mb-[4px] text-gray-600">&lt;h3&gt;</p>
                   <p
                     class="border-l-2 border-gray-600 px-4 font-secondary font-normal text-[16px] mx-[49px]"
@@ -153,6 +174,25 @@
           </section>
         </div>
       </main>
+      <footer class="flex flex-col gap-4 mt-[128px] text-center">
+        <div class="flex flex-row gap-4 justify-center">
+          <img
+            src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do GitHub 1.svg"
+            alt=""
+          />
+          <img
+            src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do Instagram 1.svg"
+            alt=""
+          />
+          <img
+            src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do LinkedIn 1.svg"
+            alt=""
+          />
+        </div>
+        <div>
+          <p class="uppercase font-secondary">Copyright © 2025 gen1nh</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
