--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
   <div class="main-wrapper max-w-[1280px] px-[14px] mt-[32px] m-auto">
-    <div class="mb-24" id="menu-hamburguer">
+    <div class="flex flex-row-reverse mb-24" id="menu-hamburguer">
       <img src="src/assets/link.svg" alt="menu-hamburguer" />
     </div>
 
@@ -53,7 +53,7 @@
             SKILLS
           </h2>
           <!-- Swiper 01 -->
-          <div class="swiper mySwiper">
+          <div class="swiper mySwiper1">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="src/assets/JavaScript.svg" alt="JavaScript Logo">
@@ -76,7 +76,7 @@
             </div>
           </div>
           <!-- Swiper 02 -->
-          <div class="swiper mySwiper">
+          <div class="swiper mySwiper2">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="src/assets/React.svg" alt="JavaScript Logo">
@@ -102,7 +102,7 @@
             </div>
           </div>
           <!-- Swiper 03 -->
-          <div class="swiper mySwiper">
+          <div class="swiper mySwiper3">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <img src="src/assets/Figma.svg" alt="JavaScript Logo">
