--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
   <div class="main-wrapper max-w-[1280px] px-[14px] mt-[32px] m-auto">
 
-<div class="flex flex-row justify-end">
+<div class="flex flex-row justify-end md:hidden">
   <img 
     id="menu-toggle-icon"
     class="w-[56px] cursor-pointer"
@@ -26,15 +26,16 @@
   />
 </div>
 
-<div id="menu-sair" class="hidden">
+<div id="menu-sair" class="hidden md:block md:py-[24px]">
   <div class="self-center">
-    <ul class="flex flex-col gap-6 text-center">
+    <ul class="flex flex-col md:flex-row md:justify-end gap-6 text-center">
       <li>Home</li>
       <li>Projects</li>
       <li>About-me</li>
     </ul>
   </div>
 </div>
+
 
     <main>
       <div class="flex flex-col gap-6 mb-[64px]">
