--- a/index.html
+++ b/index.html
@@ -17,47 +17,45 @@
 <body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
   <div class="main-wrapper max-w-[1280px] px-[14px] mt-[32px] m-auto">
 
-<div class="flex flex-row justify-end md:hidden">
-  <img 
-    id="menu-toggle-icon"
-    class="w-[56px] cursor-pointer"
-    src="src/assets/link.svg"
-    alt="menu-hamburguer"
-  />
-</div>
+    <div class="flex flex-row justify-end md:hidden">
+      <img id="menu-toggle-icon" class="w-[56px] cursor-pointer" src="src/assets/link.svg" alt="menu-hamburguer" />
+    </div>
 
-<div id="menu-sair" class="hidden md:block md:py-[24px]">
-  <div class="self-center">
-    <ul class="flex flex-col md:flex-row md:justify-end gap-6 text-center">
-      <li>Home</li>
-      <li>Projects</li>
-      <li>About-me</li>
-    </ul>
-  </div>
-</div>
+    <div id="menu-sair" class="hidden md:block md:py-[24px]">
+      <div class="self-center">
+        <ul class="flex flex-col md:flex-row md:justify-end gap-6 text-center">
+          <li>Home</li>
+          <li>Projects</li>
+          <li>About-me</li>
+        </ul>
+      </div>
+    </div>
 
 
     <main>
       <div class="flex flex-col gap-6 mb-[64px]">
-        <h1 class="text-5xl mt-[96px] font-semibold font-primary text-center">
+        <h1 class="text-5xl mt-[96px] font-semibold font-primary text-center sm:text-8xl md:text-9xl lg:text-[192px]">
           GENINHO
         </h1>
-        <p class="uppercase text-center text-[16px] leading-6 tracking-[2.2px] font-secondary font-medium">
-          ux|ui design, Front end <br />
+        <p
+          class="uppercase text-center text-[16px] leading-6 tracking-[2.2px] font-secondary font-medium lg:text-[22px]">
+          ux|ui design, Front end
           & App Developer.
         </p>
-        <p class="text-center font-light leading-[24px] text-stone-400">
-          I am a seasoned full-stack software <br />
-          engineer with over 8 years of professional <br />
-          experience, specializing in backend development. <br />
+
+        <p class="flex self-center text-center font-light leading-[24px] text-[16px] md:text-[18px] max-w-[680px] w-[100%]  text-stone-400">
+          I am a seasoned full-stack software
+          engineer with over 8 years of professional 
+          experience, specializing in backend development. <br>
           My expertise lies in crafting robust and scalable SaaS-based
           architectures on the Amazon AWS platform.
         </p>
-        <div class="flex flex-col self-center gap-[16px] min-w-[168px]">
-          <button type="button" class="rounded-full font-semibold bg-white text-stone-950 max-w-[168px] min-h-[52px]">
+
+        <div class="flex flex-col lg:flex-row self-center gap-[16px]">
+          <button type="button" class="rounded-full font-semibold bg-white text-stone-950 w-[168px] h-[54px]">
             Projects
           </button>
-          <button type="button" class="rounded-full font-semibold border-2 text-white max-w-[168px] min-h-[52px]">
+          <button type="button" class="rounded-full font-semibold border-2 text-white w-[168px] h-[54px]">
             Download CV
           </button>
         </div>
