--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
     <div id="menu-sair" class="hidden md:block md:py-[24px]">
       <div class="self-center">
-        <ul class="flex flex-col md:flex-row md:justify-end text-center">
+        <ul class="flex flex-col items-center gap-2 md:flex-row md:justify-end text-center">
           <li class="btn-links">Home</li>
           <li class="btn-links">Projects</li>
-          <li class="btn-links mr-4">About-me</li>
-          <img src="src/assets/dark.svg" alt="">
+          <li class="btn-links">About-me</li>
+          <img class="w-[24px]" src="src/assets/dark.svg" alt="">
         </ul>
 
       </div>
@@ -36,7 +36,7 @@
 
     <main>
       <div class="flex flex-col gap-6 mb-[64px]">
-        <h1 class="text-5xl mt-[96px] font-semibold font-primary text-center sm:text-8xl md:text-9xl lg:text-[192px]">
+        <h1 class="text-7xl mt-[96px] font-semibold font-primary text-center sm:text-[122px] md:text-[152px] lg:text-[192px]">
           GENINHO
         </h1>
         <p
