--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div id="menu-sair" class="hidden md:block md:py-[24px]">
       <div class="self-center">
         <ul class="flex flex-col items-center gap-2 md:flex-row md:justify-end text-center">
-          <li class="btn-links">Home</li>
-          <li class="btn-links">Projects</li>
-          <li class="btn-links">About-me</li>
+            <li class="btn-links"><a href="index.html">Home</a></li>
+            <li class="btn-links"><a href="projects.html">Projects</a></li>
+            <li class="btn-links"><a href="about-me.html">About-me</a></li>
           <img class="w-[24px]" src="src/assets/dark.svg" alt="">
         </ul>
 
