--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="bg-gradient-to-t from-zinc-800 to-stone-950 text-white">
-    <div class="main-wrapper max-w-[1200px] px-[14px] mt-[32px] m-auto">
+    <div class="main-wrapper max-w-[1280px] px-[14px] mt-[32px] m-auto">
 
         <div class="flex flex-row justify-end md:hidden">
             <img id="menu-toggle-icon" class="w-[56px] cursor-pointer" src="src/assets/link.svg"
@@ -53,16 +53,16 @@
                     </nav>
 
                     <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,574px))] gap-6 justify-center">
-                        <div class="bg-purple-100 w-full rounded-xl">
+                        <div class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
                             <img src="public/images/gradient1.png" class="w-full" alt="">
                         </div>
-                        <div class="bg-purple-100 w-full rounded-xl">
+                       <div class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
                             <img src="public/images/gradient1.png" class="w-full" alt="">
                         </div>
-                        <div class="bg-purple-100 w-full rounded-xl">
+                        <div class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
                             <img src="public/images/gradient1.png" class="w-full" alt="">
                         </div>
-                        <div class="bg-purple-100 w-full rounded-xl">
+                        <div class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
                             <img src="public/images/gradient1.png" class="w-full" alt="">
                         </div>
 
