--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
         <main>
             <section>
                 <div class="flex flex-col gap-[32px]">
-                    <h1 class="font-semibold text-3xl md:text-4xl mb-2 md:mb-6 mt-[132px] lg:text-5xl">
+                    <h1 class="font-semibold text-3xl mt-[96px] md:text-4xl mb-2 md:mb-6 lg:mt-[132px] lg:text-5xl">
                         Projects
                     </h1>
                     <nav class="mb-2 flex flex-col">
