--- a/projects.html
+++ b/projects.html
@@ -53,17 +53,21 @@
                     </nav>
 
                     <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,574px))] gap-6 justify-center">
-                        <div class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
-                            <img src="src/assets/01.png" class="w-full" alt="">
+                        <div
+                            class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                            <img src="src/assets/01.png" class="w-full rounded-xl" alt="">
                         </div>
-                       <div class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
-                            <img src="src/assets/02.png" class="w-full" alt="">
+                        <div
+                            class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                            <img src="src/assets/02.png" class="w-full rounded-xl" alt="">
                         </div>
-                        <div class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
-                            <img src="src/assets/03.png" class="w-full" alt="">
+                        <div
+                            class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                            <img src="src/assets/03.png" class="w-full rounded-xl" alt="">
                         </div>
-                        <div class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
-                            <img src="src/assets/04.png" class="w-full" alt="">
+                        <div
+                            class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                            <img src="src/assets/04.png" class="w-full rounded-xl" alt="">
                         </div>
 
                     </div>
