--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div id="menu-sair" class="hidden md:block md:py-[24px]">
       <div class="self-center">
         <ul class="flex flex-col items-center gap-2 md:flex-row md:justify-end text-center">
-            <li class="btn-links"><a href="index.html">Home</a></li>
-            <li class="btn-links"><a href="projects.html">Projects</a></li>
-            <li class="btn-links"><a href="about-me.html">About-me</a></li>
+          <li class="btn-links"><a href="index.html">Home</a></li>
+          <li class="btn-links"><a href="projects.html">Projects</a></li>
+          <li class="btn-links"><a href="about-me.html">About-me</a></li>
           <img class="w-[24px]" src="src/assets/dark.svg" alt="">
         </ul>
 
@@ -36,7 +36,8 @@
 
     <main>
       <div class="flex flex-col gap-6 mb-[64px]">
-        <h1 class="text-7xl mt-[96px] font-semibold font-primary text-center sm:text-[122px] md:text-[152px] lg:text-[192px]">
+        <h1
+          class="text-7xl mt-[96px] font-semibold font-primary text-center sm:text-[122px] md:text-[152px] lg:text-[192px]">
           GENINHO
         </h1>
         <p
@@ -58,9 +59,10 @@
           <button type="button" class=" btn-primary bg-white text-stone-950 ">
             Projects
           </button>
-          <button type="button" class=" btn-primary text-white">
+          <a href="src/assets/Geninho_CV.pdf" download="Geninho_CV.pdf" class="btn-primary text-white flex justify-center items-center">
             Download CV
-          </button>
+          </a>
+
         </div>
 
         <div class="mt-[100px]">
