--- a/projects.html
+++ b/projects.html
@@ -53,22 +53,39 @@
                     </nav>
 
                     <div class="grid grid-cols-[repeat(auto-fit,minmax(300px,574px))] gap-6 justify-center">
-                        <div
-                            class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
-                            <img src="src/assets/01.png" class="w-full rounded-xl" alt="">
-                        </div>
-                        <div
-                            class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
-                            <img src="src/assets/02.png" class="w-full rounded-xl" alt="">
-                        </div>
-                        <div
-                            class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
-                            <img src="src/assets/03.png" class="w-full rounded-xl" alt="">
-                        </div>
-                        <div
-                            class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
-                            <img src="src/assets/04.png" class="w-full rounded-xl" alt="">
-                        </div>
+                        
+                        
+                        <a href="https://dribbble.com/shots/26517507-M-dulo-Refeit-rio-App-UI-Design-in-Figma?utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=M%C3%B3dulo%20Refeit%C3%B3rio%20%E2%80%93%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=M%C3%B3dulo%20Refeit%C3%B3rio%20%E2%80%93%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share"
+                            target="_blank" rel="noopener" class="block" title="Módulo Refeitório – App UI Design in Figma">
+                            <div
+                                class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                                <img src="src/assets/01.png" class="w-full rounded-xl" alt="Módulo Refeitório – App UI Design in Figma">
+                            </div>
+                        </a>
+
+                        <!-- card 02 -->
+                        <a href="https://dribbble.com/shots/26517476-e-agro-App-UI-Design-in-Figma?utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=e-agro%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=gen1nh&utm_content=e-agro%20App%20UI%20Design%20in%20Figma&utm_medium=Social_Share" target="_blank" class="block" title="e-agro App UI Design in Figma">
+                            <div
+                                class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                                <img src="src/assets/02.png" class="w-full rounded-xl" alt="">
+                            </div>
+                        </a>
+
+                        <!-- card 03 -->
+                        <a href="#" class="block" title="Project 3">
+                            <div
+                                class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                                <img src="src/assets/03.png" class="w-full rounded-xl" alt="">
+                            </div>
+                        </a>
+
+                        <!-- card 04 -->
+                        <a href="#" class="block" title="Project 4">
+                            <div
+                                class="bg-purple-100 w-full shadow-[0_10px_30px_rgba(0,0,0,0.08)] rounded-xl hover:shadow-[0_20px_50px_rgba(0,0,0,0.15)] hover:-translate-y-2 hover:cursor-pointer transition-all duration-300 lg:flex-row-reverse">
+                                <img src="src/assets/04.png" class="w-full rounded-xl" alt="">
+                            </div>
+                        </a>
 
                     </div>
                 </div>
@@ -82,6 +99,7 @@
                 <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do GitHub 1.svg" alt="" />
                 <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do Instagram 1.svg" alt="" />
                 <img src="my-portfolio-tw-v2/src/assets/Item → Link → Ícone do LinkedIn 1.svg" alt="" />
+                <img src="src/assets/dribbble-svgrepo-com.svg" alt="" />
             </div>
             <div>
                 <p class="uppercase font-secondary">Copyright © 2025 gen1nh</p>
